# hevi

./: db.sqlite3  manage.py  pyproject.toml
fitness/: admin.py  models.py  schema.py
fitness/migrations/: 0001_initial.py  0002_measurements.py  0003_measurements_measurementdate.py
hevi/: asgi.py  schema.py  settings.py  urls.py  wsgi.py
