[tool.poetry]
name = "hevi_fitness"
version = "0.1.0"
description = ""
authors = ["Rich Kevan"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.4"
graphene-django = "^2.15.0"
Pillow = "^9.1.1"
django-filter = "^21.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
